# codebase-multiagent

./: .env.example  .gitignore  MEMORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
codebase_rag/: __init__.py
codebase_rag/agents/: __init__.py  architect.py  coordinator.py  engineer.py  factory.py  state.py  validator.py
codebase_rag/cli/: __init__.py  dev_cmd.py  index_cmd.py  main.py  query_cmd.py
codebase_rag/core/: __init__.py  chunk.py  chunker.py  language.py  parser_pool.py
codebase_rag/db/: __init__.py  client.py  collections.py
codebase_rag/embeddings/: __init__.py  factory.py
codebase_rag/indexing/: __init__.py  indexer.py
codebase_rag/retrieval/: __init__.py  rag.py
tests/: conftest.py
tests/unit/: test_chunk.py  test_chunker.py  test_collections.py  test_coordinator.py  test_embeddings_factory.py  test_language.py  test_state.py
