[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "codebase-rag"
version = "0.1.0"
description = "RAG system for codebases using ChromaDB, Langchain, and tree-sitter"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Developer"}
]
keywords = ["rag", "codebase", "chroma", "langchain", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chromadb>=0.4.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "langgraph>=1.0.0",
    "tree-sitter>=0.20.0,<0.22",
    "tree-sitter-languages",
    "click>=8.0.0",
    "tqdm>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "bandit>=1.7.0",
]

[project.scripts]
rag = "codebase_rag.cli.main:cli"

[tool.poetry]
packages = [{include = "codebase_rag"}]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
